<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>rqt_free_gait_action</name>
  <version>0.1.1</version>
  <description>rqt_free_gait_action provides a GUI plugin to ...</description>

  <author email="samuel.bachmann@gmail.com">Samuel Bachmann</author>
  <maintainer email="samuel.bachmann@gmail.com">Samuel Bachmann</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/leggedrobotics/free_gait</url>
  <url type="bugtracker">https://github.com/leggedrobotics/free_gait/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>free_gait_msgs</depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>std_srvs</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
